Set theme jekyll-theme-midnight

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: digits
 description: Digits is an application that allows users to register an account, create and manage a set of contacts, and add a set of timestamped notes regarding their interactions with each contact
 google_analytics:
 show_downloads: true
-theme: jekyll-theme-tactile
+theme: jekyll-theme-midnight
 
 gems:
   - jekyll-mentions
