--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: digits
-description: Digits is an application that allows users to register an account, create and manage a set of contacts, and add a set of timestamped notes regarding their interactions with each contact
+description: 
 google_analytics:
 show_downloads: true
 theme: jekyll-theme-midnight
